[gd_scene load_steps=3 format=2]

[ext_resource path="res://addons/gd-sqlite/scenes/binary_downloader.gd" type="Script" id=1]
[ext_resource path="res://icon.svg" type="Texture" id=2]

[node name="binary_downloader" type="Control"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -308.0
margin_top = -98.0
script = ExtResource( 1 )

[node name="http_request" type="HTTPRequest" parent="."]
use_threads = true

[node name="close_timer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="margin" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 8
custom_constants/margin_bottom = 8

[node name="panel" type="Panel" parent="margin"]
margin_right = 300.0
margin_bottom = 90.0
rect_clip_content = true

[node name="margin" type="MarginContainer" parent="margin/panel"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 4
custom_constants/margin_top = 4
custom_constants/margin_left = 4
custom_constants/margin_bottom = 4

[node name="v_box" type="VBoxContainer" parent="margin/panel/margin"]
margin_left = 4.0
margin_top = 4.0
margin_right = 296.0
margin_bottom = 86.0

[node name="h_box" type="HBoxContainer" parent="margin/panel/margin/v_box"]
margin_right = 292.0
margin_bottom = 50.0

[node name="logo" type="TextureRect" parent="margin/panel/margin/v_box/h_box"]
margin_right = 57.0
margin_bottom = 50.0
size_flags_horizontal = 3
texture = ExtResource( 2 )
expand = true
stretch_mode = 5

[node name="v_box" type="VBoxContainer" parent="margin/panel/margin/v_box/h_box"]
editor/display_folded = true
margin_left = 61.0
margin_right = 292.0
margin_bottom = 50.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 4.0

[node name="version" type="HSplitContainer" parent="margin/panel/margin/v_box/h_box/v_box"]
margin_right = 231.0
margin_bottom = 14.0
split_offset = 60
dragger_visibility = 1

[node name="label" type="Label" parent="margin/panel/margin/v_box/h_box/v_box/version"]
margin_right = 61.0
margin_bottom = 14.0
text = "Version:"
clip_text = true

[node name="value" type="Label" parent="margin/panel/margin/v_box/h_box/v_box/version"]
margin_left = 73.0
margin_right = 231.0
margin_bottom = 14.0
size_flags_horizontal = 3
text = "Unknown"
autowrap = true

[node name="filename" type="HSplitContainer" parent="margin/panel/margin/v_box/h_box/v_box"]
margin_top = 18.0
margin_right = 231.0
margin_bottom = 32.0
split_offset = 60
dragger_visibility = 1

[node name="label" type="Label" parent="margin/panel/margin/v_box/h_box/v_box/filename"]
margin_right = 61.0
margin_bottom = 14.0
text = "Filename:"
clip_text = true

[node name="value" type="Label" parent="margin/panel/margin/v_box/h_box/v_box/filename"]
margin_left = 73.0
margin_right = 231.0
margin_bottom = 14.0
size_flags_horizontal = 3
text = "Unknown"
autowrap = true

[node name="status" type="HSplitContainer" parent="margin/panel/margin/v_box/h_box/v_box"]
margin_top = 36.0
margin_right = 231.0
margin_bottom = 50.0
split_offset = 60
dragger_visibility = 1

[node name="label" type="Label" parent="margin/panel/margin/v_box/h_box/v_box/status"]
margin_right = 61.0
margin_bottom = 14.0
text = "Status:"
clip_text = true

[node name="value" type="Label" parent="margin/panel/margin/v_box/h_box/v_box/status"]
margin_left = 73.0
margin_right = 231.0
margin_bottom = 14.0
size_flags_horizontal = 3
text = "Unknown"
autowrap = true

[node name="progress_bar" type="ProgressBar" parent="margin/panel/margin/v_box"]
margin_top = 54.0
margin_right = 292.0
margin_bottom = 82.0
mouse_filter = 1
size_flags_vertical = 3
max_value = 1.0

[connection signal="request_completed" from="http_request" to="." method="_on_http_request_request_completed"]
[connection signal="timeout" from="close_timer" to="." method="_on_close_timer_timeout"]
